# simple_python_profiler

./: .gitignore  LICENSE  README.md  example.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: pythonapp.yml  pythonpublish.yml
scripts/: print_profile_stats  print_stats
simple_profiler/: __init__.py
src/: profiler.py  simple_profiler.py
test/: test_end_to_end.py  test_profiler.py
