[metadata]
name = simple_profiler
author = Tim Preece
author-email = tdpreece@gmail.com
summary = python profiler
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/tdpreece/simple_python_profiler
project_urls =
    Bug Tracker = https://github.com/tdpreece/simple_python_profiler/issues
    Documentation = https://github.com/tdpreece/simple_python_profiler
    Source Code = https://github.com/tdpreece/simple_python_profiler
license = MIT
classifier =
    Programming Language :: Python

[files]
packages =
    simple_profiler

[entry_points]
console_scripts =
     print_profile_stats = simple_profiler:print_stats
